2006-05-04  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.14.modules: Glom: Added dependency on 
	gnome-doc-utils.

2006-05-02  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome-2.16.modules: same here.

	* modulesets/gnome-2.14.modules (gamin, gnome-mount): add to
	build.  Patch from Sylvain Bertrand, fixing bug #333614.

	* jhbuild/versioncontrol/git.py: similar fixes.

	* jhbuild/versioncontrol/svn.py: make sure 'svn' and 'svn+ssh' are
	in urlparse.uses_relative.

	* modulesets/gnome-2.16.modules: same here.

	* modulesets/gnome-2.14.modules (ekiga): depend on
	evolution-data-server, to fix bug #340281.

	* jhbuild/modtypes/mozillamodule.py (MozillaModule.do_install):
	don't create the nss include dir if it already exists.  Based on
	patch from Frederic Peters fixing bug #340151.
	Split the find command into a string list, so that the shell isn't
	used to execute it.

	* modulesets/gnome-2.16.modules (gok): depend on gnome-speech.
	Patch from David Bolter, fixing bug #339957.
	(gnome-nettool): depend on gnome-doc-utils.  Fixes bug #340126.

	* jhbuild/frontends/gtkui.py: patch from Björn Lindqvist to fix
	some bugs with the error dialog.  Patch from bug #334828.

	* jhbuild/moduleset.py (ModuleSet.get_module_list): simplify
	dependency expansion based on patch from Björn Lindqvist in bug
	334711.
	(_parse_module_set): more simplifications, partly based on Björn's
	patch.

2006-05-01  James Henstridge  <james@jamesh.id.au>

	* jhbuild/versioncontrol/git.py: make sure git: and git+ssh: URIs
	are treated as netloc ones.

	* modulesets/gnome-2.16.modules (pango, gtk+): depend on just
	"cairo" rather than "cairo-1-1".

	* modulesets/freedesktop.modules (cairo): switch to git tree.
	This is using an <svnmodule> element but it does use the GIT
	version control interface.

	* modulesets/moduleset.rnc (repository): add validation rules for
	git type repositories.

	* jhbuild/versioncontrol/git.py: first stab at git support using