@@ -1,3 +1,15 @@
+2006-05-08  James Henstridge  <james@jamesh.id.au>
+
+	* jhbuild/modtypes/svnmodule.py (parse_svnmodule): same here.
+
+	* jhbuild/modtypes/base.py (parse_cvsmodule): look up module
+	specific autogenargs and makeargs overrides by id rather than
+	module.  Fixes bug #340927.
+
+	* jhbuild/modtypes/mozillamodule.py (MozillaModule.get_srcdir):
+	fix small typo.  Fixing bug #340916, and hopefully fixing mozilla
+	build.
+
 2006-05-04  Murray Cumming  <murrayc@murrayc.com>
 
 	* modulesets/gnome-2.14.modules: Glom: Added dependency on 
